add first block

--- a/WachatCustomize/app/src/main/res/layout/activity_main.xml
+++ b/WachatCustomize/app/src/main/res/layout/activity_main.xml
@@ -1,44 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".main.MainActivity">
+    android:layout_height="match_parent">
 
+    <FrameLayout
+        android:id="@+id/frameLayoutContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/radioGroupMenu"/>
 
-    <Button
-        android:id="@+id/btn_like"
-        android:layout_width="wrap_content"
+    <RadioGroup
+        android:id="@+id/radioGroupMenu"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="集赞"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.092"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.058" />
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal"
+        android:paddingBottom="@dimen/y20"
+        android:paddingTop="@dimen/y20">
 
-    <Button
-        android:id="@+id/btn_forward"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:text="转发"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.092"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_like"
-        app:layout_constraintVertical_bias="0.109" />
-</android.support.constraint.ConstraintLayout>
+        <RadioButton
+            android:id="@+id/radioBtnWechat"
+            style="@style/HomeRadioButton"
+            android:drawableTop="@drawable/radio_btn_drawble_home"
+            android:text="微信"/>
+
+        <RadioButton
+            android:id="@+id/radioBtnContacts"
+            style="@style/HomeRadioButton"
+            android:drawableTop="@drawable/radio_btn_drawble_statement"
+            android:text="通讯录"/>
+
+
+        <RadioButton
+            android:id="@+id/radioBtnPost"
+            style="@style/HomeRadioButton"
+            android:drawableTop="@drawable/radio_btn_drawble_calculator"
+            android:text="发现"/>
+
+        <RadioButton
+            android:id="@+id/radioBtnMe"
+            style="@style/HomeRadioButton"
+            android:drawableTop="@drawable/radio_btn_drawble_me"
+            android:text="我"/>
+    </RadioGroup>
+
+
+
+</RelativeLayout>
