--- a/WachatCustomize/app/src/main/res/layout/adapter_wechat_list.xml
+++ b/WachatCustomize/app/src/main/res/layout/adapter_wechat_list.xml
@@ -36,4 +36,8 @@
         android:layout_marginRight="@dimen/x60"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+    <RelativeLayout
+        android:background="@color/color_hint_gray"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/y2"></RelativeLayout>
 </RelativeLayout>
