--- a/WachatCustomize/app/src/main/res/layout/post_rv_item.xml
+++ b/WachatCustomize/app/src/main/res/layout/post_rv_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rela_parent"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/y500">
+    android:layout_height="@dimen/y300">
 
     <ImageView
         android:id="@+id/iv_avatar"
@@ -10,16 +11,17 @@
         android:background="@color/bg_ff2faeed"
         android:layout_width="@dimen/x130"
         android:layout_height="@dimen/x130" />
+
     <TextView
         android:id="@+id/tv_name"
-        android:text="i am name"
-        android:textColor="@color/text_5A688E"
-        android:layout_toRightOf="@+id/iv_avatar"
-        android:textStyle="bold"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignTop="@+id/iv_avatar"
         android:layout_marginLeft="@dimen/x40"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_toRightOf="@+id/iv_avatar"
+        android:text="i am name"
+        android:textColor="@color/text_5A688E"
+        android:textStyle="bold" />
     <TextView
         android:id="@+id/tv_content"
         android:layout_below="@+id/tv_name"
@@ -30,6 +32,27 @@
         android:text="我是你爸爸"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/tv_date"
+        android:text="两分钟前"
+        android:textSize="@dimen/x38"
+        android:layout_toRightOf="@+id/iv_avatar"
+        android:layout_marginLeft="@dimen/x40"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="@dimen/x40"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <ImageView
+        android:id="@+id/iv_more"
+        android:background="@drawable/ic_postadapt_more"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="@dimen/x40"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="@dimen/x30"
+        android:layout_width="@dimen/x70"
+        android:layout_height="@dimen/x50" />
+
     <RelativeLayout
         android:id="@+id/line"
         android:background="@color/text_ffbbbbbb"
