--- a/WachatCustomize/app/src/main/res/values/colors.xml
+++ b/WachatCustomize/app/src/main/res/values/colors.xml
@@ -34,6 +34,8 @@
     <color name="bg_f2f6f7">#F2F6F7</color>
     <color name="bg_ffff6e6e">#FFFF6E6E</color>
     <color name="bg_f303030">#303030</color>
+    <color name="bg_EBEBEB">#EBEBEB</color>
+    <color name="bg_C1C1C1">#C1C1C1</color>
 
     <!--边框颜色-->
     <color name="stroke_4dbbbbbb">#4DBBBBBB</color>
