--- a/WachatCustomize/app/src/main/res/layout/post_rv_item.xml
+++ b/WachatCustomize/app/src/main/res/layout/post_rv_item.xml
@@ -32,7 +32,15 @@
         android:text="我是你爸爸"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-
+    <ImageView
+        android:id="@+id/iv_content"
+        android:layout_below="@+id/tv_content"
+        android:layout_toRightOf="@+id/iv_avatar"
+        android:layout_marginTop="@dimen/x10"
+        android:visibility="gone"
+        android:background="@drawable/ic_right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/tv_date"
         android:text="两分钟前"
